# ctypesQt

./: .gitignore  config.py  ctypesQt.py  test.py
testqt/: CMakeLists.txt  QtTest.cpp
